# sro-minitaur-transfer

./: .gitignore  LICENSE  README.md  STATUS.md  _audit_stats_check.py  incontext_stats.json  pyproject.toml  requirements-model.txt  requirements.txt
configs/: default.yaml  tasks.yaml
docs/: index.html
notebooks/: 01_diagnostics.ipynb  02_finetune_and_eval.ipynb  centaur70b_surprise_scale.ipynb  incontext.ipynb  incontext_finetune.ipynb  phase1_mpop.ipynb  phase2_encoder.ipynb  phase3_identification.ipynb  phase4_nll.ipynb  rt_channel_8b.ipynb  rt_head_B.ipynb  rt_head_B_trained.ipynb  rt_incontext.ipynb
scripts/: analyze_incontext_stats.py  build_incontext_matrix.py  build_surprise_matrix.py  check_population_rt.py  diagnose_rep_transfer.py  diagnose_surprise_transfer.py  finetune_incontext.py  finetune_mpop.py  phase1_test.py  phase2_train.py  phase3_identify.py  phase4_nll.py  probe_criterion.py  render_nl.py  retest_ceiling.py  rt_head_transfer.py  run_baserate_control.py  run_identification.py  run_incontext.py  run_reliability.py  run_transfer_matrix.py  train_person_transfer.py  train_rt_head.py
src/sro_transfer/: __init__.py  runtime.py  stats.py
src/sro_transfer/data/: __init__.py  build_correctness.py  centaur_render.py  datasets.py  splits.py
src/sro_transfer/diagnostics/: __init__.py  handcrafted.py  reliability.py  transfer_matrix.py
src/sro_transfer/eval/: __init__.py  identification.py  nll.py  scoring.py
src/sro_transfer/model/: __init__.py  incontext.py  inject.py  masking.py  mpop.py  person_encoder.py  rt_head.py  surprise.py  (+2 more)
(+2 files in other folders)
